--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -8,9 +8,17 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://172.19.0.2:5432/user
+spring.datasource.url= jdbc:postgresql://172.19.0.3:5432/user
 spring.datasource.username=root
 spring.datasource.password=123
 
 jwt.secret=a21c6156-7003-11ec-90d6-0242ac120003
 jwt.token.validity=3600000
+
+## kafka
+spring.kafka.producer.bootstrap-servers=172.19.0.5:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+## topics
+wallet.kafka.topic.user-domain-event=create-user-domain-event
