--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://172.19.0.2:5432/wallet
 spring.datasource.username=root
 spring.datasource.password=123
+
+## kafka
+spring.kafka.producer.bootstrap-servers=172.19.0.5:9092
+spring.kafka.consumer.group-id=wallet-group-id
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+## topics
+wallet.kafka.topic.user-domain-event=create-user-domain-event
