--- a/wallet/pom.xml
+++ b/wallet/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.rcardoso.challenge</groupId>
 	<artifactId>wallet</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>wallet</name>
 	<description>Wallet microservice</description>
 	<properties>
@@ -32,8 +32,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
