--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 spring.application.name=user-service
 server.port=8889
-eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8888/eureka
 
 ## db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://172.19.0.3:5432/user
-spring.datasource.username=root
-spring.datasource.password=123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
 
 jwt.secret=a21c6156-7003-11ec-90d6-0242ac120003
 jwt.token.validity=3600000
 
 ## kafka
-spring.kafka.producer.bootstrap-servers=172.19.0.5:9092
+spring.kafka.producer.bootstrap-servers=${KAFKA_SERVER}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
