--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=wallet-service
 server.port=8890
-eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8888/eureka
 
 ## db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://172.19.0.2:5432/wallet
-spring.datasource.username=root
-spring.datasource.password=123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
 
 ## kafka
-spring.kafka.producer.bootstrap-servers=172.19.0.5:9092
+spring.kafka.producer.bootstrap-servers=${KAFKA_SERVER}
 spring.kafka.consumer.group-id=wallet-group-id
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
