--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -7,10 +7,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true&autoReconnect=true
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url= jdbc:mysql://${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true&autoReconnect=true
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3307/wallet?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.username=userdb
+spring.datasource.password=admin123
 
 ## kafka
 spring.kafka.producer.bootstrap-servers=${KAFKA_SERVER}
